Mia commit di prova

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,13 +1,18 @@
 #Server port
-server.port = 8888
+server.port = 8889
  
 #Git repo location
-spring.cloud.config.server.git.uri=/app/spring-cloud-dataflow/config-repo
+#spring.cloud.config.server.git.uri=file:///E:/SpringCloudConfig_rep
+spring.cloud.config.server.git.uri=file:///E:/SpringCloudConfig_rep/config-repo
+#spring.profiles.active=native
+#spring.cloud.config.server.native.searchLocations=file:///E:\SpringCloudConfig_rep
+#spring.cloud.config.server.native.searchLocations=E:/SpringCloudConfig_rep
 
 #Verify any repository issue in service startup
 spring.cloud.config.server.git.cloneOnStart=true
 
-#spring.application.name=serverTest
+spring.application.name=serverConfig
  
 #Disable security of the Management endpoint
-management.security.enabled=false
+#management.security.enabled=false
+logging.level.org.springframework.web=DEBUG
