--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+#Server port
+server.port = 8889
+ 
+#Git repo location
+#spring.cloud.config.server.git.uri=file:///E:/SpringCloudConfig_rep
+spring.cloud.config.server.git.uri=file:///E:/SpringCloudConfig_rep/config-repo
+#spring.profiles.active=native
+#spring.cloud.config.server.native.searchLocations=file:///E:\SpringCloudConfig_rep
+#spring.cloud.config.server.native.searchLocations=E:/SpringCloudConfig_rep
 
+#Verify any repository issue in service startup
+spring.cloud.config.server.git.cloneOnStart=true
+
+spring.application.name=serverConfig
+ 
+#Disable security of the Management endpoint
+#management.security.enabled=false
+
+logging.level.org.springframework.web=DEBUG
